--- a/.tmux.conf
+++ b/.tmux.conf
@@ -73,6 +73,7 @@ unbind p
 bind p paste-buffer
 bind -t vi-copy 'v' begin-selection
 bind -t vi-copy 'y' copy-selection
+bind-key -t vi-copy 'C-v' rectangle-toggle # Begin selection in copy mode.
 
 # # switch between session
 bind -r ( switch-client -p
@@ -130,7 +131,8 @@ set -g status-utf8 on
 
 # # Status line right side
 # # 15% | 28 Nov 18:15
-set -g status-right "#[fg=green][#(date +'%m-%d %H:%M')]"
+set -g status-right "#(battery -t) #[fg=green][#(date +'%m-%d %H:%M')]"
+# set -g status-right "#[fg=green][#(date +'%m-%d %H:%M')]"
 
 # # Update the status bar every sixty seconds
 set -g status-interval 60
@@ -145,4 +147,14 @@ set -g visual-activity on
 # # Working with the Clipboard on Linux
 bind C-c run "tmux save-buffer - | xclip -i -sel clipboard"
 bind C-v run "tmux set-buffer \"$(xclip -o -sel clipboard)\"; tmux paste-buffer"
+set -g default-terminal "screen-256color"
+run-shell ~/.tmux/tmux-resurrect/resurrect.tmux
+
+
+
+
+set -g @resurrect-processes 'ssh vi vim'
+set -g @resurrect-save-bash-history 'on'
+set -g @resurrect-capture-pane-contents 'on'
+set -g @resurrect-strategy-vim 'session'
 
