add tpm and some plugins

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -56,10 +56,10 @@ bind -r L resize-pane -R 5
 
 
 # mouse support - set to on if you want to use the mouse
-setw -g mode-mouse off
-set -g mouse-select-pane off
-set -g mouse-resize-pane off
-set -g mouse-select-window off
+# setw -g mode-mouse off
+# set -g mouse-select-pane off
+# set -g mouse-resize-pane off
+# set -g mouse-select-window off
 
 
 # orgrgin_shortkey_define{
@@ -127,7 +127,7 @@ set -g display-panes-colour colour166 #orange
 # # Status line left side
 set -g status-left-length 40
 set -g status-left "#[fg=green]s#S:w#I.p#P#[default]"
-set -g status-utf8 on
+# set -g status-utf8 on
 
 # # Status line right side
 # # 15% | 28 Nov 18:15
@@ -148,8 +148,39 @@ set -g visual-activity on
 bind C-c run "tmux save-buffer - | xclip -i -sel clipboard"
 bind C-v run "tmux set-buffer \"$(xclip -o -sel clipboard)\"; tmux paste-buffer"
 set -g default-terminal "screen-256color"
-run-shell ~/.tmux/tmux-resurrect/resurrect.tmux
+# run-shell ~/.tmux/tmux-resurrect/resurrect.tmux
 
+
+
+
+
+if "test ! -d ~/.tmux/plugins/tpm" \
+       "run 'git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm && ~/.tmux/plugins/tpm/bin/install_plugins'"
+
+# https://github.com/tmux-plugins/tpm
+set -g @plugin 'tmux-plugins/tpm'
+
+
+set -g @plugin 'tmux-plugins/tmux-sensible'
+
+# https://github.com/tmux-plugins/tmux-copycat
+set -g @plugin 'tmux-plugins/tmux-copycat'
+
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-continuum'
+
+# https://github.com/tmux-plugins/tmux-sessionist
+set -g @plugin 'tmux-plugins/tmux-sessionist'
+
+#
+#    prefix + g - prompts for session name and switches to it. Performs 'kind-of' name completion.
+#    Faster than the built-in prefix + s prompt for long session lists.
+#    prefix + C (shift + c) - prompt for creating a new session by name.
+#    prefix + X (shift + x) - kill current session without detaching tmux.
+#    prefix + S (shift + s) - switches to the last session.
+#    The same as built-in prefix + L that everyone seems to override with some other binding.
+#    prefix + @ - promote current pane into a new session.
+#    Analogous to how prefix + ! breaks current pane to a new window.
 
 
 
@@ -157,4 +188,13 @@ set -g @resurrect-processes 'ssh vi vim'
 set -g @resurrect-save-bash-history 'on'
 set -g @resurrect-capture-pane-contents 'on'
 set -g @resurrect-strategy-vim 'session'
+
+
+set -g @continuum-save-interval '15'
+set -g @continuum-restore 'on'
+
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run '~/.tmux/plugins/tpm/tpm'
+
 
